# kaos

./: .gitignore  20260630_125900_HANDOFF.md  20260630_194835_HANDOFF.md  20260630_194835_KAOS_ARCHITECTURE_PLAN.md  GUIDE.md  HANDOFF.md  PLAN.md  README.md  __init__.py  __main__.py  config.py  docker-compose.yml  executor_facade.py  kaos_report_vi.md  package.json  pnpm-lock.yaml  pyproject.toml  run-antigravity.sh  run-kaos.sh  spec.md  test_kaos.py  tsconfig.json
application/: __init__.py  use_cases.py
baselines/: metrics.json
benchmarks/: graph_vs_file.csv  module-benchmark.js
bridge/: antigravity_watcher.py  executor.ts
configs/: blacklist.json  docker-compose.sandbox.yml  runner_config.json
docs/: README.md  kaos_scan_guide.md
docs/adr/: ADR-001_llm-agnostic-provider.md  ADR-002_redisgraph-memory-aware-routing.md
docs/design/: 01_llm_provider_architecture.md  02_scout_act_architecture.md
domain/: __init__.py  models.py  value_objects.py
infrastructure/: di.py
infrastructure/adapters/: gatekeeper_adapter.py  git_adapter.py  storage_adapter.py
kaos_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: benchmark.py  check-kaos-stax.sh  demo_graph.py  visualize_graph.py
skills/: README.md  cli-backend.md  cli-contract.md  cli-data-analyzer.md  cli-db.md  cli-error-classifier.md  cli-evaluator.md  cli-executor.md  cli-review.md  cli-test.md  cli-think.md
src/kaos/: __init__.py  __main__.py  config.py  executor_facade.py
src/kaos/application/: __init__.py  ports.py  use_cases.py
src/kaos/application/use_cases/: __init__.py  act_executor.py  analyze_compatibility.py  analyze_requirements.py  classify_error.py  detect_scope.py  execute_pipeline.py  execute_workflow.py  extract_schema.py  git_auto_manager.py  scan_codebase.py  scout_coordinator.py
src/kaos/bridge/: antigravity_watcher.py  architecture-checker.ts  codebase-scanner.ts  executor.ts  test-architecture-checker.ts
src/kaos/domain/: __init__.py  code_graph.py  models.py  scout_results.py  value_objects.py
src/kaos/engine/: __init__.py  execution_policy.py  executor_facade.py  supervisor_agent.py  task_queue_engine.py  task_runner.py
src/kaos/infrastructure/: __init__.py  di.py
src/kaos/infrastructure/adapters/: __init__.py  antigravity_adapter.py  cache_adapter.py  claude_code_adapter.py  gatekeeper_adapter.py  git_adapter.py  (+8 more)
src/kaos/interfaces/: cli.py
src/kaos/python/: check_python.py
tests/: test_domain.py  test_infrastructure.py  test_standalone.py  test_telegram.py
tests/domain/: test_code_graph.py  test_scout_results.py
tests/infrastructure/: test_cache_adapter.py  test_git_sandbox.py  test_json_codegraph_repo.py  test_synthesizer.py  test_ts_code_scanner.py
tests/use_cases/: conftest.py  test_act_executor.py  test_analyze_compatibility.py  test_analyze_requirements.py  test_detect_scope.py  test_execute_workflow.py  test_extract_schema.py  test_git_auto_manager.py  test_scan_codebase.py  test_scan_codebase_integration.py  test_scout_coordinator.py
