[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaos-cli"
version = "1.1.0"
description = "KAOS: Knowledge-Augmented Organization System - Standalone AI Task Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["redis>=4.4.0", "aiohttp>=3.8.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
kaos = "kaos.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
